# ib-practica11-oop-cmake-Adrian-glz01

complejo/: CMakeLists.txt
complejo/src/: complejo  complejo.cc  complejo.h  complejo_main.cc
fecha/: CMakeLists.txt
fecha/src/: fecha  fecha.cc  fecha.h  fecha_main.cc  file
modificacion/: CMakeLists.txt
modificacion/src/: modificacion  modificacion.cc  modificacion.h  modificacion_main.cc  resultado.txt
racional/: CMakeLists.txt
racional/src/: rac  rac.txt  racional.cc  racional.h  racional_main.cc
